Updated Robot Code
My most recent update to the line following robot code. Right now My heartbeat LED is working and my OLED screen is updating to show me how the camera is working, I need to test the camera on the race track in real life to determine if it will work

--- a/Line_Robot_Code/Robot_Code/CMakeLists.txt
+++ b/Line_Robot_Code/Robot_Code/CMakeLists.txt
@@ -35,7 +35,7 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(Robot_Code Robot_Code.c ssd1306.c)
+add_executable(Robot_Code Robot_Code.c ssd1306.c cam.c)
 
 pico_set_program_name(Robot_Code "Robot_Code")
 pico_set_program_version(Robot_Code "0.1")
